# ica_causal_effect

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  ABLATION_RESULTS_EXPECTED.md  CI_CD.md  CLAUDE.md  ICA_DIAGONAL_ISSUE_ANALYSIS.md  ICA_FIX_SUMMARY.md  ICA_INITIALIZATION_ABLATION.md  QUICK_START_ICA_FIX.md  README.md  REBUTTAL_BINARY_TREATMENT.md  REBUTTAL_NONLINEAR_SYNTHETIC.md  REBUTTAL_PLAN.md  REBUTTAL_REALDATA.md  SETUP_SUMMARY.md  TESTING.md  ablation_utils.py  baselines.py  binary_treatment_dgp.py  binary_treatment_runner.py  compare_ica_methods.py  diagnose_ica_diagonal.py  eta_ablation_experiments.py  eta_ablation_plotting.py  eta_noise_ablation.py  eta_noise_ablation_refactored.py  experiment_runner.py  gaussian_eta_experiment.py  ica.py  ica_fixed.py  ica_initialization_ablation.py  ica_plotting.py  ica_utils.py  ica_variants.py  main_estimation.py  mcc.py  merge_results.py  monte_carlo_single_instance.py  (+35 more)
.claude/: settings.json
autoresearch/: PROGRAM.md  RESEARCH_LOG.md  analyze_nonlinear_round.py  analyze_round.py  calibrate_selector.py  learn_selector_tree.py  plot_calibration.py  plot_ica_win_frontier.py  plot_multiselector.py  plot_selector_regret.py  plot_ws3_sensitivity.py  plot_ws4_closure.py
cluster/: README.md  cluster.sub  generate_params.py  run_autoresearch_job.sh  run_experiment.sh  sweep_all_experiments.sub  sweep_binary_treatment.sub  sweep_eta_ablation.sub  sweep_extended_baselines.sub  sweep_full.sub  sweep_gaussian_eta.sub  sweep_multi_instance.sub  sweep_nonlinear.sub  sweep_rebuttal.sub  sweep_runner.py  (+1 more)
(+120 files in other folders)
